# simplespan-core

./: .gitattributes  CLAUDE.md  CONTRIBUTING-AI-ADDENDUM.md  CONTRIBUTING.md  LICENSE  README.md  README_AIC_ORCHESTRATOR.md  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ai-summary.yml  ci.yml  docs-and-logs-check.yml  docs-audit.yml  router-map-lint.yml  tests.yml
docs/: context_index.json  docs_audit.config.yaml  docs_audit_report.json
docs/framework/: README.md  governance-index.md  quick-start.md
docs/framework/1-governance/: coding-implementation-standards.md  simple-span-framework-refinement-plan-v4.0.md  simple-span-framework-refinement-plan-v5.0.md  software-architecture-guide.md  software-development-handbook.md
docs/framework/2-validation/: validation-verification-manual.md
docs/framework/3-libraries/: shared-library-integration-guide.md
docs/whitepapers/: executive-summary-simplespan.md  whitepaper-simplespan-v1.md
examples/logs/: valid-session.yaml
examples/plans/: section-properties-plan-sample.md
reports/: governance-dashboard.html  progress.md
scripts/: run-tests.sh
src/: README.md
src/simplespan_core/: __init__.py
src/simplespan_core.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/ai/: test_ai_summary.py  test_docs_audit.py  test_router.py
tools/: aic_orchestrator.config.yaml  aic_orchestrator.py  docs_audit.py
tools/ai/: README-router.md  ai_log_append.py  ai_summary.py  aic_logger.py  route_task.py  router-map.schema.json  router-map.yaml
(+18 files in other folders)
